After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 684972 - qtdemux: cannot play mp4 file when MOOV atom is at the end of file
qtdemux: cannot play mp4 file when MOOV atom is at the end of file
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
git master
Other Linux
: Normal normal
: 1.0.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-09-27 15:37 UTC by Arnaud Vrac
Modified: 2012-09-27 21:22 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix upstream_size type (237 bytes, patch)
2012-09-27 15:37 UTC, Arnaud Vrac
committed Details | Review

Description Arnaud Vrac 2012-09-27 15:37:15 UTC
Created attachment 225266 [details] [review]
Fix upstream_size type

When playing an mp4 file with the MOOV atom at the end of the file, playback fails with the error message "no 'moov' atom within the first 10 MB". This is due to a mistake in the upstream_size typing, making the seek to the end of file never happening.
Comment 1 Tim-Philipp Müller 2012-09-27 21:22:01 UTC
I haven't been able to reproduce this myself, but the fix is obviously correct, so pushed, thanks!

 commit f0db4a8213c8b22634dd5d1f5f5eeba19d36aba2
 Author: Arnaud Vrac <rawoul@gmail.com>
 Date:   Thu Sep 27 22:17:49 2012 +0100

    qtdemux: fix parsing in push mode when moov atom is at the end
    
    When playing an mp4 file with the MOOV atom at the end of the file, playback
    fails with the error message "no 'moov' atom within the first 10 MB". This is
    due to a mistake in the upstream_size typing, making the seek to the end of
    file never happening.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=684972

It would be nice if you could provide a patch in git format-patch format next time (esp. since it looks like it was generated from a git commit ...).